force-app/main/default/objects/Issued_Premium__c/Issued_Premium__c.object-meta.xml
<CustomObject>
    <description>Premium that has been issued to a subscriber as part of the offer or as a means for customer satisfaction.</description>
    <label>Issued Premium</label>
    <nameField>
        <label>Issued Premium Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Issued Premiums</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>