force-app/main/default/objects/Issued_Premium__c/fields/Date_Issued__c.field-meta.xml
<CustomField>
        <fullName>Date_Issued__c</fullName>
        <description>Date the premium was approved to be delivered</description>
        <label>Date Issued</label>
        <type>Date</type>
    </CustomField>