force-app/main/default/objects/Issued_Premium__c/fields/Offer__c.field-meta.xml
<CustomField>
        <fullName>Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is part of an offer</description>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Issued Premiums</relationshipLabel>
        <relationshipName>Issued_Premiums</relationshipName>
        <type>Lookup</type>
    </CustomField>