force-app/main/default/objects/Issued_Premium__c/fields/Subscription__c.field-meta.xml
<CustomField>
        <fullName>Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this is given out as a means of customer retention.</description>
        <label>Subscription</label>
        <referenceTo>Subscription__c</referenceTo>
        <relationshipLabel>Issued Premiums</relationshipLabel>
        <relationshipName>Issued_Premiums</relationshipName>
        <type>Lookup</type>
    </CustomField>